# fpga

./: .babelrc  .eslintrc  .gitignore  .travis.yml  Cargo.toml  Dockerfile  Dockerfile.api  Dockerfile.app  Dockerfile.frontend  Dockerfile.postgres  LICENSE  README.md  build  build.sh  config.json  devserver.sh  docker-compose.yml  game.hs  main.go  nginx.conf  notes.md  package.json  readme.md  webpack.config.js
adapters/web/: conferences.go  errhandle.go  error.go  middlewares.go  users.go  utils.go  web.go
api/: main.go
core/: events.go  factory.go  mail.go  storage.go  user.go  util.go
db/: db.go  types.go
domain/: domain.go  user.go
example/: App.js  index.html  root.js  server.js  webpack.config.js
handlers/: auth.go  handlers.go
providers/: doc.go  event.go  jwt.go  mail.go  validator.go
providers/postgres/: conferences  factory.go  storage.go  user.go  utils.go
src/: App.js  Component.js  index.js  lib.rs  main.go  main.rs
src/api/: main.go
src/config/: loader.rs  mod.rs
src/core/: errors.go  user.go
src/db/: conn.go  db.go  types.go  users.go
src/domain/: conference.go  user.go
src/fabric/: bram.rs  dff.rs  lut.rs  mod.rs  wire.rs
src/gui/: mod.rs  server.rs
src/handlers/: auth.go  confs.go  handlers.go  users.go
src/place_and_route/: mod.rs  placer.rs  router.rs
src/simulation/: engine.rs  mod.rs  timing.rs
src/users/: auth.go  types.go  users.go
src/utils/: crypt.go  utils.go
tests/: app.test.js
users/: users.go
www/: package-lock.json  package.json  webpack.config.js
www/public/: index.html
www/src/: index.js
(+1 files in other folders)
